Spacing and organizational improvements for content. Includes fixing the blockquote top-margin issues, making tables horizontally scrollable, and limiting inline image widths to the width of the page.
closes drexelforchrist/drexelforchrist.org#7

--- a/cdn/style/screen.less
+++ b/cdn/style/screen.less
@@ -383,7 +383,22 @@ main#corset {
         transition: opacity 20s;
         padding: 0 @sectionPadding 1em;
 
-        p:first-child {
+        img {
+            max-width:100%;
+        }
+
+        table {
+            overflow-x:auto;
+            max-width:100%;
+            display:block;
+
+            -ms-overflow-style: none;
+        }
+        table::-webkit-scrollbar {
+            width: 0 !important
+        }
+
+        :first-child {
             margin-top:0;
         }
     }
